Revisión de párrafos en comunidades nativas

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/_footnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/_footnotes.cshtml
@@ -23,7 +23,15 @@
                 <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
             </a>
             &nbsp;&nbsp;&nbsp;
-            Precedente de observancia obligatoria establecido en el artículo 1 de la Resolución Nº 076-2017-OSINFOR-  TFFS. (respecto a la conducta infractora por el incumplimiento de las condiciones establecidas en el título habilitante por la no declaración del volumen de madera) “los administrados se encuentran en la obligación de sustentar la procedencia legal de los productos forestales extraídos, por ello, se exige que ésta se realice mediante las guías de transporte forestal, toda vez que, así se puede acreditar su origen legal, dejando un registro en cuanto a especies y volúmenes movilizados, que permite a la autoridad hacer seguimiento a la trazabilidad del recurso forestal extraído e identificar su trayectoria desde el primer puesto de control
+            <strong>Artículo 29.- Obligaciones de las comunidades campesinas o comunidades nativas con títulos habilitantes.</strong>
+            <br />
+            29.1 Las comunidades campesinas o comunidades nativas a las que se les ha otorgado título habilitante, asumen las siguientes obligaciones:
+            <br />
+            (…).
+            <br />
+            d. Tener y mantener actualizado el libro de operaciones de acuerdo a los lineamientos aprobados por el SERFOR.
+            <br />
+            (…)
         </p>
     </div>
 </div>
