--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -15,7 +15,7 @@
                         <td style="width: 30px; vertical-align: top;">:</td>
                         <td style="vertical-align: top;">
                             <strong>Luisa Cóndor Meza</strong><br />
-                            <span>Ejecutiva de la Sub Dirección de Sanción</span>
+                            <span>Ejecutiva de la Subdirección de Sanción</span>
                         </td>
                     </tr>
                     <tr>
