--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_22.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_22.cshtml
@@ -32,7 +32,7 @@
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
-            Mediante el escrito, ingresado con fecha XX de XX de 2022, con registro N° XX, la/el administrada/o presentó sus descargos contra la Resolución Sub Directoral N° ${ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, donde se advierten los siguientes argumentos que guardan relación con la imputación materia de análisis:
+            Mediante el escrito, ingresado con fecha XX de XX de XXXX, con registro N° XX, la/el administrada/o presentó sus descargos contra la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, donde se advierten los siguientes argumentos que guardan relación con la imputación materia de análisis:
             <br /><br />
             <ol style="list-style-type: lower-alpha">
                 <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
