--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -22,7 +22,9 @@
                         <td style="vertical-align: top;"><strong>Asunto</strong></td>
                         <td style="width: 30px; vertical-align: top;">:</td>
                         <td style="vertical-align: top;">
-                            Resultados de la fase instructora del Procedimiento Administrativo Único iniciado a ${TITULAR || '(indicar por defecto el nombre)'}, titular del ${TIPO_CONTRATO} N° ${NUM_CONTRATO || '(indicar por defecto el contrato)'}
+                            Resultados de la fase instructora del Procedimiento Administrativo Único iniciado a
+                            ${TITULAR || '(indicar texto)'}, titular del {{if COD_MODALIDAD != '04'}} ${TIPO_CONTRATO} N° {{/if}}
+                            ${NUM_CONTRATO || '(indicar texto)'}
                         </td>
                     </tr>
                     <tr>
@@ -126,13 +128,12 @@
                             {{/if}}
 
                             {{if COD_MODALIDAD == '02'}}
-                            <li>Decreto Supremo Nº 065-2009-PCM, Reglamento de Organización y Funciones del OSINFOR, modificado por el Decreto Supremo Nº 029-2017-PCM.</li>
+                            <li>Decreto Supremo Nº 136-2022-PCM, Reglamento de Organización y Funciones del OSINFOR, modificado por el Decreto Supremo Nº 029-2017-PCM.</li>
                             <li>Decreto Supremo Nº 043-2006-AG, Categorización de Especies Amenazadas de Flora Silvestre.</li>
                             <li>Decreto Supremo Nº 007-2021-MIDAGRI, que aprueba el Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre.</li>
                             <li>Resolución de Jefatura Nº 059-2019-OSINFOR, Criterios SGC-M1-CRI-001-V.02 "Criterios para estimar la gravedad del daño por la comisión de infracciones en materia forestal".</li>
                             <li>Resolución de Jefatura Nº 00043-2021-OSINFOR/01.1, Reglamento del Procedimiento Administrativo Único del OSINFOR.</li>
                             <li>Resolución de Jefatura N° 00055-2020-OSINFOR/01.1, que determina los "Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del OSINFOR".</li>
-                            <li>Resolución Directoral N° 001-2017-OSINFOR-DFFFS, que determina a la Sub Dirección de Fiscalización de Permisos y Autorizaciones Forestales y de Fauna Silvestre actúe como autoridad instructora.</li>
 
                             {{else COD_MODALIDAD == '03'}}
                             <li>Decreto Supremo Nº 136-2022-PCM, que aprueba el Reglamento de Organización y Funciones del OSINFOR</li>
@@ -141,16 +142,14 @@
                             <li>Resolución de Jefatura Nº 059-2019-OSINFOR, Criterios SGC-M1-CRI-001-V.02 "Criterios para estimar la gravedad del daño por la comisión de infracciones en materia forestal".</li>
                             <li>Resolución de Jefatura Nº 043-2021-OSINFOR/01.1, Reglamento del Procedimiento Administrativo Único del OSINFOR.</li>
                             <li>Resolución de Jefatura N° 00055-2020-OSINFOR/01.1, que determina los "Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del OSINFOR".</li>
-                            <li>Resolución Directoral N° 001-2017-OSINFOR-DFFFS, que determina a la Sub Dirección de Fiscalización de Permisos y Autorizaciones Forestales y de Fauna Silvestre actúe como autoridad instructora.</li>
 
                             {{else COD_MODALIDAD == '04'}}
-                            <li>Decreto Supremo Nº 065-2009-PCM, Reglamento de Organización y Funciones del OSINFOR, modificado por el Decreto Supremo Nº 029-2017-PCM.</li>
+                            <li>Decreto Supremo Nº 136-2022-PCM, Reglamento de Organización y Funciones del OSINFOR, modificado por el Decreto Supremo Nº 029-2017-PCM.</li>
                             <li>Decreto Supremo Nº 043-2006-AG, Categorización de Especies Amenazadas de Flora Silvestre.</li>
                             <li>Decreto Supremo Nº 007-2021-MIDAGRI, que aprueba el Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre.</li>
                             <li>Resolución de Jefatura Nº 059-2019-OSINFOR, Criterios SGC-M1-CRI-001-V.02 "Criterios para estimar la gravedad del daño por la comisión de infracciones en materia forestal".</li>
                             <li>Resolución de Jefatura Nº 00043-2021-OSINFOR/01.1, Reglamento del Procedimiento Administrativo Único del OSINFOR.</li>
                             <li>Resolución de Jefatura N° 00055-2020-OSINFOR/01.1, que determina los "Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del OSINFOR".</li>
-                            <li>Resolución Directoral N° 001-2017-OSINFOR-DFFFS, que determina a la Sub Dirección de Fiscalización de Permisos y Autorizaciones Forestales y de Fauna Silvestre actúe como autoridad instructora.</li>
                             {{/if}}
                         </ul>
                     </span>
@@ -188,7 +187,7 @@
                     <ol class="continue" style="margin-left: -37pt;">
                         <li>
                             <span>
-                                Del análisis efectuado en el presente informe, ha quedado acreditado que el/la ${DENOMINACION_TITULAR} es responsable por la comisión de las infracciones tipificadas en los numerales X, X, X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+                                Del análisis efectuado en el presente informe, ha quedado acreditado que el/la ${DENOMINACION_TITULAR} es responsable por la comisión de las infracciones tipificadas en los numerales X, X, X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo ${COD_MODALIDAD != '04'?'1':'2'} del RISMFFS.
                             </span>
                         </li>
                     </ol>
@@ -201,20 +200,22 @@
                             <li>
                                 Remitir el presente informe a la Autoridad Decisora para que proceda conforme a su competencia, adjuntando para tal efecto el Expediente Administrativo N° ${EXPEDIENTE_ADM || 'XXXXX-XXXX-OSINFOR/08.2'}, para los fines correspondientes.
                             </li>
+                            {{if [1,3].includes(FLG_SANCION)}}
                             <li>
-                                Amonestar al/la ${DENOMINACION_TITULAR}/a por la comisión de la(s) infracción(es) previstas en el/los numeral(es) X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+                                Amonestar al/la ${DENOMINACION_TITULAR}/a por la comisión de la(s) infracción(es) previstas en el/los numeral(es) X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo ${COD_MODALIDAD != '04'?'1':'2'} del RISMFFS.
                             </li>
-                            <li>
-                                Sancionar al/la ${DENOMINACION_TITULAR}/a por la comisión de la(s) infracción(es) previstas en el/los numeral(es) X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS, debiendo imponérsele una multa ascendente a ${SANCION_UIT} UIT detallado en el Anexo I del presente informe.
-                            </li>
+                            {{/if}}
                             {{if [2,3].includes(FLG_SANCION)}}
                             <li>
-                                Aplicar la sanción de multa consignada en el Anexo I del presente informe, equivalente a X.XXX UIT, respecto a la comisión de las infracciones tipificada/s en los numerales (precisar la/s conducta/s no desvirtuada/s) del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado por Decreto Supremo N° 007-2021-MIDAGRI.
+                                Sancionar al/la ${DENOMINACION_TITULAR}/a por la comisión de la(s) infracción(es) previstas en el/los numeral(es) X y X del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo ${COD_MODALIDAD != '04'?'1':'2'} del RISMFFS, debiendo imponérsele una multa ascendente a ${SANCION_UIT} UIT detallado en el Anexo I del presente informe.
+                            </li>
+                            <li>
+                                Aplicar la sanción de multa consignada en el Anexo I del presente informe, equivalente a ${SANCION_UIT} UIT, respecto a la comisión de las infracciones tipificada/s en los numerales (precisar la/s conducta/s no desvirtuada/s) del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo ${COD_MODALIDAD != '04'?'1':'2'} del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado por Decreto Supremo N° 007-2021-MIDAGRI.
                             </li>
                             {{/if}}
                             {{if FLG_MEDIDA_CORRECTIVA}}
                             <li>
-                                Disponer que el/la concesionaria cumpla con la medida correctiva detallada en el Anexo II del presente informe.
+                                Disponer que el/la ${DENOMINACION_TITULAR}/a cumpla con la medida correctiva detallada en el Anexo II del presente informe.
                             </li>
                             {{/if}}
                             {{if FLG_MEDIDA_COMPLEMENTARIA}}
