Se agregó 2 incisos a fauna

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
@@ -123,7 +123,7 @@
         </span>
     </li>
     <li>
-        Ahora bien, de acuerdo con el Reporte de Antecedentes, de fecha XX de XXXXXX de XXXX, se advierte que el/la administrado/a no registra sanción de amonestación y/o multa impuesta por la Dirección de Fiscalización Forestal y de Fauna Silvestre. En esa línea, se puede considerar que <strong>la concesionaria no ha incurrido en reincidencia</strong>.
+        Ahora bien, de acuerdo con el Reporte de Antecedentes, de fecha XX de XXXXXX de XXXX, se advierte que el/la administrado/a no registra sanción de amonestación y/o multa impuesta por la Dirección de Fiscalización Forestal y de Fauna Silvestre. En esa línea, se puede considerar que <strong>el administrado no ha incurrido en reincidencia</strong>.
     </li>
     <li>
         {{if FLG_SANCION == 1}}
@@ -141,7 +141,7 @@
 <h5 style="margin-left: -5pt;"><u><strong>De las medidas correctivas (mandatos)</strong></u></h5>
 <ol class="continue" style="margin-left: -40pt;">
     <li>
-        Para el presente caso, corresponde analizar si resulta viable dictar la medida correctiva por el incumplimiento del Mandato N° 02 y el incumplimiento del plan de manejo (infraestructura de respaldo), según lo dispuesto en los Criterios SGC-M1-CRI-004-V.01 “Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre - OSINFOR”, aprobado mediante Resolución de Jefatura Nº 00055-2020-OSINFOR/01.1.
+        Para el presente caso, corresponde analizar si resulta viable dictar la medida correctiva por el incumplimiento del Mandato N° XX y el incumplimiento del plan de manejo (infraestructura de respaldo), según lo dispuesto en los Criterios SGC-M1-CRI-004-V.01 “Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre - OSINFOR”, aprobado mediante Resolución de Jefatura Nº 00055-2020-OSINFOR/01.1.
     </li>
 </ol>
 <h5 style="margin-left: -5pt;"><u><strong>Sobre el incumplimiento del Mandado N° xx:</strong></u></h5>
@@ -153,7 +153,7 @@
         En concordancia a ello, en el literal c) del numeral 11.2 del artículo 11 del RISMFFS, se disponen las medidas correctivas que pueden disponerse, entre las cuales se encuentra la medida de “Adopción de medidas de prevención y mitigación del riesgo o daño a los recursos otorgados a través del derecho de aprovechamiento”.
     </li>
     <li>
-        En ese sentido, y habiéndose determinado la necesidad de la implementación continua del manejo de seguridad en el Centro de Custodia Temporal, el tipo de medida correctiva de prevención y mitigación, la cual es viable acreditando la implementación de candados en todos los recintos del Centro de Custodia Temporal y deberá ser realizada conforme lo señala el Anexo II del presente informe.
+        En ese sentido, y habiéndose determinado la necesidad de la implementación continua del manejo de seguridad en el XXXXXXX, el tipo de medida correctiva de prevención y mitigación, la cual es viable acreditando la implementación de candados en todos los recintos del Centro de Custodia Temporal y deberá ser realizada conforme lo señala el Anexo II del presente informe.
     </li>
 </ol>
 <h5 style="margin-left: -5pt;"><u><strong>Sobre la implementación del plan de manejo (infraestructura de respaldo):</strong></u></h5>
