--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -224,7 +224,7 @@
                             </li>
                             {{/if}}
                             <li>
-                                Notificar el presente informe final de instrucción al/la ${DENOMINACION_TITULAR}/a, en el (consignar domicilio), otorgándole el plazo de quince (15) días hábiles más el término de la distancia, en caso corresponda, contados a partir del día siguiente de la fecha de notificación, para que formule los descargos que considere pertinentes a su derecho de defensa, debiendo consignar el domicilio donde desea ser notificada en el curso del procedimiento. Dicha información, deberá remitirla de forma virtual, por la mesa de partes digital ,a través del portal web del OSINFOR: https://facilita.gob.pe/t/677 y solo si el archivo a adjuntar excede los 10 MB, remitirlo al correo mesa.partes@osinfor.gob.pe, o de forma presencial, ante la mesa de partes de la sede central del OSINFOR en la ciudad de Lima o ante cualquier mesa de partes de sus oficinas desconcentradas. De la misma manera, se le recuerda que puede tramitar se le asigne una Casilla Electrónica brindada por el OSINFOR que le permitirá recibir las diferentes comunicaciones o actuaciones administrativas que emita la Entidad .
+                                Notificar el presente informe final de instrucción al/la ${DENOMINACION_TITULAR}/a, en el (consignar domicilio).
                             </li>
                             <li>
                                 Asimismo, se solicita que los documentos que presente en el marco del PAU consignen el siguiente número de expediente: ${EXPEDIENTE_ADM || 'XXXXX-XXXX-OSINFOR/08.2'}.
