Correcciones en incisos de fauna

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
@@ -116,7 +116,7 @@
             <ul>
                 {{each(i, infr) INFRACCIONES}}
                 <li>
-                    Respecto de la infracción tipificada como ${infr.gravedad?.toLowerCase()} en el numeral ${infr.inciso} del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 2 del RISMFFS, con una {{if infr.tipoInfraccion > 1}}multa ascendente ${infr.rangoSancion || 'XX A XX UIT'} {{else}}amonestación{{/if}}.
+                    Respecto de la infracción tipificada como ${infr.gravedad?.toLowerCase()} en el numeral ${infr.inciso} del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 2 del RISMFFS, con una {{if infr.tipoInfraccion > 1}}multa ascendente ${infr.rangoSancion || 'XX A XX UIT'}{{else}} amonestación{{/if}}.
                 </li>
                 {{/each}}
             </ul>
@@ -147,7 +147,7 @@
 <h5 style="margin-left: -5pt;"><u><strong>Sobre el incumplimiento del Mandado N° xx:</strong></u></h5>
 <ol class="continue" style="margin-left: -40pt;">
     <li>
-        Ahora bien, de acuerdo al Cuadro N° XX (Medidas correctivas en materia de fauna silvestre y plazos para su implementación) de los “Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre - OSINFOR”, aprobado por Resolución Jefatural N° 00055-2020-OSINFOR, no se establece una medida específica para el incumplimiento de mandatos. No obstante, dispone que “La DFFFS evaluará la pertinencia de disponer otras medidas correctivas que no se encuentren contempladas en el presente documento”.
+        Ahora bien, de acuerdo al Cuadro N° XY (Medidas correctivas en materia de fauna silvestre y plazos para su implementación) de los “Criterios para la disposición, seguimiento y verificación de las medidas correctivas y/o mandatos en materia forestal y de fauna silvestre del Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre - OSINFOR”, aprobado por Resolución Jefatural N° 00055-2020-OSINFOR, no se establece una medida específica para el incumplimiento de mandatos. No obstante, dispone que “La DFFFS evaluará la pertinencia de disponer otras medidas correctivas que no se encuentren contempladas en el presente documento”.
     </li>
     <li>
         En concordancia a ello, en el literal c) del numeral 11.2 del artículo 11 del RISMFFS, se disponen las medidas correctivas que pueden disponerse, entre las cuales se encuentra la medida de “Adopción de medidas de prevención y mitigación del riesgo o daño a los recursos otorgados a través del derecho de aprovechamiento”.
