--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_22.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_22.cshtml
@@ -58,7 +58,7 @@
             <br /><br />
             <ul>
                 <li>
-                    <strong>Respecto a especimen.-</strong> Al momento de la supervisión, se advierte que XX
+                    <strong>Respecto a espécimen.</strong> Al momento de la supervisión, se advierte que XX
                 </li>
                 <li>
                     En el Reglamento para la Gestión de Fauna Silvestre, aprobado mediante Decreto Supremo N° 019-2015-MINAGRI, establece en el literal k) del numeral 17.1 del artículo 17
