--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -23,7 +23,7 @@
                         <td style="width: 30px; vertical-align: top;">:</td>
                         <td style="vertical-align: top;">
                             Resultados de la fase instructora del Procedimiento Administrativo Único iniciado a
-                            ${TITULAR || '(indicar texto)'}, titular del {{if COD_MODALIDAD != '04'}} ${TIPO_CONTRATO} N° {{/if}}
+                            ${TITULAR || '(indicar texto)'}, titular de {{if COD_MODALIDAD != '04'}} ${TIPO_CONTRATO} N° {{/if}}
                             ${NUM_CONTRATO || '(indicar texto)'}
                         </td>
                     </tr>
