--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
@@ -798,10 +798,10 @@
                 </div>
                 <div class="p-3" v-else>
                     <div class="row">
-                        <div class="col-auto">
+                        <div class="col-3">
                             <i class="fa fa-cloud-upload fa-5x text-success"></i>
                         </div>
-                        <div class="col">
+                        <div class="col-9">
                             <h3>Información del archivo</h3>
                             <div class="mb-2">{{info.name}}</div>
                             <div><b>Tamaño:</b> {{info.sizeFormat}}</div>
